--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_menu"/>
-
+        app:menu="@menu/bottom_navigation_menu"
+        app:itemTextColor="@color/buttonsAndMenu" />
 </RelativeLayout>
