--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,18 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/pokedex_home"
+        android:color="@color/buttonsAndMenu"
         android:title="@string/pokedex_home_button"
-        android:icon="@drawable/ic_pokedex_bottommenu" />
+        android:icon="@drawable/pokedex_home_selector" />
 
     <item android:id="@+id/regions"
         android:title="@string/regions_button"
-        android:icon="@drawable/ic_regions_bottommenu" />
+        android:icon="@drawable/regions_selector" />
 
     <item android:id="@+id/favorites"
        android:title="@string/favorites_button"
-        android:icon="@drawable/ic_favorites_bottommenu" />
+        android:icon="@drawable/favorite_selector" />
 
     <item android:id="@+id/profile"
         android:title="@string/profile_button"
-        android:icon="@drawable/ic_profile_bottommenu" />
+        android:icon="@drawable/profile_selector" />
 </menu>
