--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,12 @@
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash_screen</item>
         <item name="postSplashScreenTheme">@style/Theme.Pokedex</item>
     </style>
+
+    <style name="Theme.Pokedex.Buttons">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="colorAccent">@color/buttonsAndMenu</item>
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
