--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,5 +17,6 @@
         <item name="android:fontFamily">@font/poppins_semibold</item>
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:padding">15dp</item>
     </style>
 </resources>
