--- a/app/src/main/res/layout/activity_login_register_onboarding.xml
+++ b/app/src/main/res/layout/activity_login_register_onboarding.xml
@@ -8,7 +8,7 @@
     android:padding="20dp">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/skip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -27,12 +27,12 @@
         android:layout_width="0dp"
         android:layout_height="250dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="16dp"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.292"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/skip_button"
         app:srcCompat="@drawable/login_register_onboarding" />
 
     <TextView
