--- a/app/src/main/res/layout/activity_login_register_onboarding.xml
+++ b/app/src/main/res/layout/activity_login_register_onboarding.xml
@@ -18,6 +18,7 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="18sp"
+        app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
