--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="match_parent">
 
 
       <androidx.viewpager2.widget.ViewPager2
@@ -17,5 +16,20 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />
 
+
+      <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+          android:id="@+id/dots_indicator"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="110dp"
+          app:dotsColor="#404565B7"
+          app:dotsCornerRadius="8dp"
+          app:dotsSize="10dp"
+          app:dotsSpacing="4dp"
+          app:dotsWidthFactor="2.5"
+          app:layout_constraintBottom_toBottomOf="@+id/slider"
+          app:layout_constraintEnd_toEndOf="@+id/slider"
+          app:layout_constraintStart_toStartOf="parent"
+          app:selectedDotColor="@color/buttonsAndMenu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
