--- a/app/src/main/res/layout/list_item_pokedex_two_types.xml
+++ b/app/src/main/res/layout/list_item_pokedex_two_types.xml
@@ -19,6 +19,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:textColor="#333333"
         android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/pokemon_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="N°001" />
@@ -32,8 +33,8 @@
         android:textColor="@color/black"
         android:textSize="21sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/types_container"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pokemon_id"
         tools:text="Bulbasaur" />
 
     <LinearLayout
@@ -41,23 +42,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pokemon_name">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:id="@+id/type_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_background"
-            android:orientation="horizontal"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/rounded_background"
             android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal"
             android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
-            android:layout_marginEnd="5dp">
+            android:paddingVertical="3dp">
 
             <ImageView
                 android:id="@+id/type_image_1"
@@ -81,11 +80,11 @@
             android:id="@+id/type_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_background"
-            android:orientation="horizontal"
+            android:background="@drawable/rounded_background"
             android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal"
             android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp">
+            android:paddingVertical="3dp">
 
             <ImageView
                 android:id="@+id/type_image_2"
@@ -107,16 +106,37 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/pokemon_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginEnd="16dp"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/pokemon_outline"
+            android:layout_width="140dp"
+            android:layout_height="0dp"
+            android:background="@drawable/list_item_pokedex_background"
+            android:paddingHorizontal="5dp"
+            tools:src="@drawable/ic_grass_outline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/pokemon_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/pokemon_outline"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
