--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -5,8 +5,8 @@
         <shape android:shape="rectangle">
             <corners android:radius="50dp" />
             <gradient
-                android:startColor="@color/buttonsAndMenu"
-                android:endColor="@color/buttonsAndMenu" />
+                android:startColor="@color/white"
+                android:endColor="@color/white" />
         </shape>
     </item>
 </selector>
