--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,4 +29,8 @@
     <style name="Theme.Pokedex.ToolBar" parent="Theme.SplashScreen">
         <item name="android:background">@android:color/transparent</item>
     </style>
+
+    <style name="Theme.Pokedex.Menu">
+
+    </style>
 </resources>
