BottomNavMenu implemented and Pokedex Screen bugs fixed

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,4 +32,8 @@
         android:id="@+id/profileFragment"
         android:name="com.kagiya.pokedex.ui.ProfileFragment"
         android:label="ProfileFragment" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.kagiya.pokedex.ui.MainActivity"
+        android:label="MainActivity" />
 </navigation>
