--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_navigation_menu"
-        android:theme=""/>
+        app:itemTextColor="@color/buttonsAndMenu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
