--- a/app/src/main/res/layout/fragment_password_registration.xml
+++ b/app/src/main/res/layout/fragment_password_registration.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.EmailRegistrationFragment">
+    tools:context=".ui.fragments.PasswordRegistrationFragment">
 
     <ImageButton
         android:contentDescription="Back"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins"
-        android:text="@string/let_get_started_button"
+        android:text="@string/now"
         android:textColor="#4D4D4D"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
-        android:text="@string/what_is_your_email"
+        android:text="@string/create_a_password"
         android:textColor="@color/black"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,14 +67,15 @@
         android:background="@drawable/bg_input_rounded_background"
         android:fontFamily="@font/poppins"
         android:gravity="center_vertical"
-        android:hint="@string/email_input_placeholder"
         android:padding="18dp"
+        android:hint="@string/password_input_placeholder"
+        android:textColorHint="#999999"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
-        android:textColorHint="#999999"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <TextView
         android:id="@+id/textView19"
@@ -82,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins"
-        android:text="@string/valid_email_warning"
+        android:text="@string/strong_password_warning"
         android:textColor="#4D4D4D"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +91,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/continue_to_register_password_button"
+        android:id="@+id/continue_to_register_username_button"
         style="@style/Theme.Pokedex.Buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,7 +102,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-    
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
