--- a/app/src/main/res/layout/fragment_email_registration.xml
+++ b/app/src/main/res/layout/fragment_email_registration.xml
@@ -70,11 +70,12 @@
         android:hint="@string/email_input_placeholder"
         android:padding="18dp"
         android:textColor="@color/black"
+        android:textColorHint="#999999"
         android:textSize="16sp"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
-        android:textColorHint="#999999"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <TextView
         android:id="@+id/textView19"
